The exit status of a case statement where none of the patterns is matched is supposed to be 0, not the status of the previous command.

Reported by:	Eygene Ryabinkin
PR:		116559
Approved by:	re (gnn)

Former-commit-id: 5b4f1ac78dd682c250eed82d520dd4d6b67e41aa